--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,13 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "bacon/bacon-qr-code": "^2.0",
         "cossou/jasperphp": "^2.5",
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
+        "pragmarx/google2fa": "^3.0",
+        "pragmarx/google2fa-laravel": "^0.2.0",
         "zizaco/entrust": "dev-master"
     },
     "require-dev": {
