--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
     "require": {
         "php": ">=7.0.0",
         "bacon/bacon-qr-code": "^2.0",
-        "cossou/jasperphp": "^2.5",
         "fideloper/proxy": "~3.3",
+        "geekcom/phpjasper": "^3.1",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "pragmarx/google2fa": "^3.0",
